--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,8 @@
-gunicorn==20.1.0
-appdirs==1.4.4
-asgiref==3.4.1
-Babel==2.9.1
-base58==2.1.0
-beautifulsoup4==4.9.3
-boto3==1.17.109
-botocore==1.20.109
-Brotli==1.0.9
-bs4==0.0.1
-certifi==2020.6.20
-chardet==3.0.4
-charset-normalizer==2.0.7
-Click==7.0
-colorama==0.4.4
-colorthief==0.2.1
-cssselect==1.1.0
-cycler==0.10.0
-cytoolz==0.11.0
-dash==1.21.0
-dash-core-components==1.17.1
-dash-html-components==1.1.4
-dash-table==4.12.0
-distlib==0.3.2
-Django==3.2.6
-docopt==0.6.2
-docutils==0.17.1
-dominate==2.5.2
-emoji==1.2.0
-eth-abi==2.1.1
-eth-hash==0.3.2
-eth-keyfile==0.5.1
-eth-keys==0.3.3
-eth-rlp==0.2.1
-eth-typing==2.2.2
-eth-utils==1.10.0
-fake-useragent==0.1.11
-filelock==3.0.12
-Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-Flask-CKEditor==0.4.4.1
-Flask-Compress==1.10.1
-Flask-Gravatar==0.5.0
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-future==0.18.2
-greenlet==1.1.0
-hexbytes==0.2.2
-idna==2.8
-importlib-metadata==4.8.1
-install==1.3.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-jmespath==0.10.0
-kiwisolver==1.3.1
-lxml==4.6.3
-MarkupSafe==1.1.1
-matplotlib==3.4.2
-momo==0.1.0
-MouseInfo==0.1.3
-mtnmomo==3.0.1
-multiaddr==0.0.9
-multidict==5.2.0
-mysql-connector-python==8.0.25
-mysqlclient==2.0.3
-netaddr==0.8.0
-numpy==1.21.1
-pandas==1.3.1
-parse==1.19.0
-parsimonious==0.8.1
-patsy==0.5.1
-phonenumbers==8.12.31
-Pillow==8.3.1
-pipenv==2021.11.15
-pipreqs==0.4.10
-plotly==5.1.0
-protobuf==3.17.3
-psycopg2-binary==2.8.6
-PyAutoGUI==0.9.53
-pycryptodome==3.11.0
-pydantic==1.8.2
-pyee==8.2.2
-pyfiglet==0.8.post1
-pygame==2.0.2
-PyGetWindow==0.0.9
-Pygments==2.10.0
-PyJWT==1.7.1
-PyMsgBox==1.0.9
-PyMySQL==1.0.2
-pyparsing==2.4.7
-pyperclip==1.8.2
-pypiwin32==223
-pyppeteer==0.2.6
-pyquery==1.4.3
-PyRect==0.1.4
-pyrsistent==0.18.0
-PyScreeze==0.1.28
-pyssml==0.1.3
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-pytweening==1.0.4
-pytz==2021.1
-pywin32==302
-PyYAML==5.4.1
-requests==2.26.0
-requests-html==0.10.0
-rlp==2.0.1
-s3transfer==0.4.2
-scipy==1.7.1
-selenium==3.141.0
-sh==1.14.2
-six==1.16.0
-soupsieve==2.2.1
-SQLAlchemy==1.3.19
-sqlparse==0.4.1
-statsmodels==0.12.2
-stripe==2.58.0
-tenacity==8.0.1
-tkcalendar==1.6.1
-toolz==0.11.1
-tqdm==4.62.3
-twilio==6.60.0
-typing-extensions==3.10.0.0
-urllib3==1.26.7
-varint==1.0.2
-verlat==0.1.0.post1
-virtualenv==20.4.7
-virtualenv-clone==0.5.7
-visitor==0.1.3
-w3lib==1.22.0
-wappdriver==0.6.6
-websockets==9.1
-Werkzeug==1.0.1
+Flask_CKEditor==0.4.4.1
 WTForms==2.3.3
-yarg==0.1.9
-yarl==1.7.0
-zipp==3.6.0
+Flask==1.1.2
+requests==2.26.0
+Flask_SQLAlchemy==2.4.4
+Flask_WTF==0.14.3
+Flask_Bootstrap==3.3.7.1
+beautifulsoup4==4.10.0
